--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": ">=7.2.5",
-        "illuminate/support": "^5.0||^6.0||^7.0",
+        "laravel/framework": "*",
         "alexcrawford/lexorank-php": "^1.0"
     },
     "require-dev": {
